# agente-amorzito

./: .dockerignore  .gitignore  Dockerfile  README.md  arquitetura.html  check_eval.py  chunking-hipertensao.py  pyproject.toml  query_corrigida.sql  render.yaml  test_has_agent.py  test_observability.py
.github/workflows/: ci.yml
app/: main.py
app/agent/: evaluator.py  orchestrator.py  workers.py
app/api/: audio.py  chat.py  security.py  voice.py  ws.py
app/core/: config.py
app/services/: analysis.py  cache.py  decision.py  evaluation_store.py  llm.py  mcp_client.py  memory.py  rag.py  sql_generator.py
app/skills/: performance_audit.py
app/tools/: athena.py  performance.py  rag.py  transcription.py
app/utils/: rate_limiter.py  streaming.py
scripts/: eval_run.py
tests/: manual_test.py  test_basics.py  test_sql_generator.py
