[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.85",
    "fastapi>=0.135.3",
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-openai>=1.1.12",
    "langchain-pinecone>=0.2.13",
    "pinecone-client>=6.0.0",
    "pyathena>=3.30.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "tzdata>=2026.1",
    "psycopg[binary]>=3.3.3",
    "loguru>=0.7.3",
    "langsmith>=0.7.26",
    "langchain-postgres>=0.0.17",
]
